mixing up with minima

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
 title: My Tech Blog
 description: A simple markdown-driven blog
 theme: minima  # Prebuilt Jekyll theme
+
+minima:
+  skin: auto  # Keeps Minima's theming logic
+  social_links: false
+sass:
+  style: compressed
